Fix dataset cards height issues
On mobile, the fixed height becomes an issue and text overlaps outside the cards.
Using flex instead, because flex is the answer to all my problems, we can make the cards extend to be the same height, but also have that height be dynamic.

--- a/metabrainz/static/css/main.less
+++ b/metabrainz/static/css/main.less
@@ -391,7 +391,7 @@ table.finances td:nth-child(2) {
 // Datasets page
 .dataset-card {
     background: #eee;
-    height: 16em;
+    min-height: 16em;
     filter: drop-shadow(0px 4px 4px fade(#000, 25%));
     border: 1px solid #e0e0e0;
     border-radius: 5px;
@@ -416,6 +416,17 @@ table.finances td:nth-child(2) {
         color: #eb743b;
         font-weight: bold;
     }
+}
+.dataset-flex-container{
+  display: flex;
+  align-items: stretch;
+  gap: 2em;
+  flex-wrap: wrap;
+  .dataset-card {
+    flex:1;
+    flex-basis: 455px; // replicate the behavior of col-md-6
+    margin: 0;
+  }
 }
 
 
